--- a/tpl/verification.html
+++ b/tpl/verification.html
@@ -22,6 +22,7 @@
     var changePasswordUrl = "<{spUrl c=login a=changePasswordIndex}>";
     var resultUrl="<{spUrl c=login a=resultIndex}>";
     var verificationUrl = "<{spUrl c=login a=verification}>";
+    var activate = "<{spUrl c=login a=activate}>";
     $(document).ready(function () {
         if ($('html').hasClass('desktop')) {
             new WOW().init();
