--- a/tpl/back/index.html
+++ b/tpl/back/index.html
@@ -122,12 +122,7 @@
 			<dd>
 				<ul>
 					<li><a data-href="<{spUrl c=backFuns a=pageIndex page='member-list'}>" data-title="會員管理" href="javascript:;">會員列表</a></li>
-					<li><a data-href="member-del.html" data-title="删除的会员" href="javascript:;">删除的会员</a></li>
-					<li><a data-href="member-level.html" data-title="等级管理" href="javascript:;">等级管理</a></li>
-					<li><a data-href="member-scoreoperation.html" data-title="积分管理" href="javascript:;">积分管理</a></li>
-					<li><a data-href="member-record-browse.html" data-title="浏览记录" href="javascript:void(0)">浏览记录</a></li>
-					<li><a data-href="member-record-download.html" data-title="下载记录" href="javascript:void(0)">下载记录</a></li>
-					<li><a data-href="member-record-share.html" data-title="分享记录" href="javascript:void(0)">分享记录</a></li>
+					<li><a data-href="member-del.html" data-title="删除的会员" href="javascript:;">已停用會員</a></li>
 			</ul>
 		</dd>
 	</dl>
