--- a/tpl/back/index.html
+++ b/tpl/back/index.html
@@ -122,7 +122,7 @@
 			<dd>
 				<ul>
 					<li><a data-href="<{spUrl c=backFuns a=pageIndex page='member-list'}>" data-title="會員管理" href="javascript:;">會員列表</a></li>
-					<li><a data-href="member-del.html" data-title="删除的会员" href="javascript:;">已停用會員</a></li>
+					<li><a data-href="<{spUrl c=backFuns a=pageIndex page='member-del'}>" data-title="已刪除會員" href="javascript:;">已刪除會員</a></li>
 			</ul>
 		</dd>
 	</dl>
@@ -137,16 +137,11 @@
 		</dd>
 	</dl>
 		<dl id="menu-tongji">
-			<dt><i class="Hui-iconfont">&#xe61a;</i> 系统统计<i class="Hui-iconfont menu_dropdown-arrow">&#xe6d5;</i></dt>
+			<dt><i class="Hui-iconfont">&#xe61a;</i> 網站信息<i class="Hui-iconfont menu_dropdown-arrow">&#xe6d5;</i></dt>
 			<dd>
 				<ul>
-					<li><a data-href="charts-1.html" data-title="折线图" href="javascript:void(0)">折线图</a></li>
-					<li><a data-href="charts-2.html" data-title="时间轴折线图" href="javascript:void(0)">时间轴折线图</a></li>
-					<li><a data-href="charts-3.html" data-title="区域图" href="javascript:void(0)">区域图</a></li>
-					<li><a data-href="charts-4.html" data-title="柱状图" href="javascript:void(0)">柱状图</a></li>
-					<li><a data-href="charts-5.html" data-title="饼状图" href="javascript:void(0)">饼状图</a></li>
-					<li><a data-href="charts-6.html" data-title="3D柱状图" href="javascript:void(0)">3D柱状图</a></li>
-					<li><a data-href="charts-7.html" data-title="3D饼状图" href="javascript:void(0)">3D饼状图</a></li>
+					<li><a data-href="<{spUrl c=backFuns a=pageIndex page='banner-list'}>" data-title="首頁Banner" href="javascript:void(0)">首頁Banner</a></li>
+					<li><a data-href="<{spUrl c=backFuns a=tou}>" data-title="使用條款" href="javascript:void(0)">使用條款</a></li>
 			</ul>
 		</dd>
 	</dl>
